<resources>
    <string name="app_name">News Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="About_App">1. Uses Volley Library for networking faster \n 2.Uses CircleImageView fast ImageView perfect for profile images. \n3.Uses Glide Library for image loading from Api</string>
    <string name="About_Developer">My Name is Ashish Sah currently doing graduation in Computer Science And Engineering.</string>
    <string name="try_again">Try Again</string>
    <string name="news">News</string>
    <string name="news_in_india">News In India</string>
    <string name="card_view_text">Apps often need to display data in similarly styled containers. These containers are often used in lists to hold each item\'s information. The system provides the CardView API as an easy way for you show information inside cards that have a consistent look across the platform.</string>
    <string name="explore">EXPLORE</string>
    <string name="share">SHARE</string>
    <string name="ashish_sah">Ashish Sah</string>
    <string name="linkedin_description">linkedin description</string>
    <string name="github_description">github description</string>
    <string name="about_developer">About Developer</string>
    <string name="about_app">About App</string>
    <string name="contentDescription">image</string>
    <string name="bottom_menu_business">Business</string>
    <string name="bottom_menu_entertainment">Entertainment</string>
    <string name="bottom_menu_health">Health</string>
    <string name="bottom_menu_science">Science</string>
    <string name="bottom_menu_sports">Sports</string>
    <string name="menu_toggle_theme">Toggle Theme</string>
    <string name="menu_share">Share</string>
    <string name="menu_about_developer">About Developer</string>
</resources>