<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/businessNews"
            android:icon="@drawable/business"
            android:title="@string/bottom_menu_business" />
        <item
            android:id="@+id/entertainmentNews"
            android:icon="@drawable/entertainment"
            android:title="@string/bottom_menu_entertainment" />
        <item
            android:id="@+id/healthNews"
            android:icon="@drawable/health"
            android:title="@string/bottom_menu_health" />
        <item
            android:id="@+id/scienceNews"
            android:icon="@drawable/science"
            android:title="@string/bottom_menu_science" />
        <item
            android:id="@+id/sportsNews"
            android:icon="@drawable/sports"
            android:title="@string/bottom_menu_sports" />
    </group>
</menu>